--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@ionic-native/geolocation": "^5.23.0",
         "@ionic-native/google-maps": "^5.0.0-beta.27",
         "@ionic-native/http": "^5.24.0",
+        "@ionic-native/in-app-browser": "^5.25.0",
         "@ionic-native/launch-navigator": "^5.23.0",
         "@ionic-native/location-accuracy": "^5.23.0",
         "@ionic-native/native-geocoder": "^5.23.0",
@@ -46,6 +47,7 @@
         "cordova-plugin-geolocation": "^4.0.2",
         "cordova-plugin-googlemaps": "^2.7.1",
         "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
+        "cordova-plugin-inappbrowser": "^3.2.0",
         "cordova-plugin-network-information": "^2.0.2",
         "cordova-plugin-request-location-accuracy": "^2.3.0",
         "core-js": "^2.5.4",
@@ -117,7 +119,8 @@
             "com.googlemaps.ios": {},
             "cordova-plugin-advanced-http": {
                 "OKHTTP_VERSION": "3.10.0"
-            }
+            },
+            "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
             "android",
